Configurando version de spring, inyectando dependecia sleuth y zipkin y ajugando logs para las trazas